[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["AiorNerok <90855034+AiorNerok@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
sqlmodel = "^0.0.8"
uvicorn = "^0.22.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
mypy = "^1.2.0"
pylint = "^2.17.3"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
